# aoc22

./: '  .ghci  .gitignore  CHANGELOG.md  README.md  aoc22.cabal  boiler.sh  fourmolu.yaml  license.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.2/: aoc22-0.1.0.0-inplace.conf  package.cache
src/: Day1.hs  Matrix.hs  Misc.hs  Template.hs
src/Day01/: Day01.hs
src/Day02/: Day02.hs
src/Day1/: Day1.hs
src/Day10/: Day10.hs
src/Day11/: Day11.hs
src/Day12/: Day12.hs
src/Day13/: Day13.hs
src/Day14/: Day14.hs
src/Day15/: Day15.hs
src/Day16/: Day16.hs  Day16.py
src/Day18/: Day18.hs
src/Day2/: Day2.hs
src/Day20/: Day20.hs
src/Day21/: Day21.hs  input1.hs
src/Day25/: Day25.hs
src/Day3/: Day3.hs
src/Day4/: Day4.hs
src/Day5/: Day5.hs
src/Day6/: Day6.hs
src/Day7/: Day7.hs
src/Day8/: Day8.hs
src/Day9/: Day9.hs
