cabal-version:      2.4
name:               aoc22
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             sebastianselander
maintainer:         sebastian.selander@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

common extensions
    default-extensions:
        ImportQualifiedPost
        OverloadedLists
        OverloadedStrings
        TupleSections
        LambdaCase

library
    import:
        extensions

    exposed-modules:
        Misc
        Day01.Day01

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        containers,
        split

    hs-source-dirs:   src

    default-language: Haskell2010

executable aoc22
    import:
        extensions

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        aoc22

    hs-source-dirs:   app

    default-language: Haskell2010
