cabal-version:      2.4
name:               aoc22
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             sebastianselander
maintainer:         sebastian.selander@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

common extensions
    default-extensions:
        ImportQualifiedPost
        OverloadedLists
        OverloadedStrings
        TupleSections
        LambdaCase

library
    import:
        extensions,
        -- warnings

    exposed-modules:
        Misc
        Day1.Day1
        Day2.Day2
        Day3.Day3
        Day4.Day4
        Day5.Day5
        Day6.Day6
        Day7.Day7
        Day8.Day8
        Day9.Day9
        Day10.Day10
        Day11.Day11
        Day12.Day12
        Day13.Day13
        Day14.Day14
        Day15.Day15
        Day16.Day16
     -- Day17.Day17
        Day18.Day18
     -- Day19.Day19
        Day20.Day20
        Day21.Day21
     -- Day22.Day22
     -- Day23.Day23
     -- Day24.Day24
     -- Day25.Day25

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        containers,
        extra,
        split,
        time,
        vector,
        pqueue,
        text,
        aeson,
        scientific,
        bytestring,
        unordered-containers,
        megaparsec,
        mtl
    hs-source-dirs:   src

    default-language: Haskell2010

executable aoc22
    import:
        extensions

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        aoc22

    hs-source-dirs:   app

    default-language: Haskell2010
